# foody

./: .gitignore  README.md  WelcomeScreenTest.py  accList.csv  foody.py  logScreen.py  main.py  pyproject.toml  roleChoosing.py  roundButton.py  setup.py  test.py  welcomeScreen.py
FOODY/: main.py  test.py
FOODY/frontend/: aiChatScreen.py  changePass.py  chatScreenOwn.py  foody.py  ingredient.py  logScreen.py  mainscreen.py  makingorders.py  onlineorders.py  revenue.py  reviewViewerScreen.py  roundButton.py  settingsScreenOwner.py  signup.py  welcomeScreen.py
FOODY_cus/: main.py
FOODY_cus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
FOODY_cus/backend/: cartmanager.py  foodmanager.py  orderinfomanager.py
FOODY_cus/data/: cart.xlsx  food.xlsx  orderInfo.xlsx
FOODY_cus/frontend/: aiChatScreen.py  changePasswordScreenCus.py  chatScreenCus.py  foodycus.py  geminiChatScreen.py  logDelayTest.py  logEndpointChangeTest.py  logGarbageCharTest.py  logScreencus.py  mainScreenCus.py  (+6 more)
backend/: ingredientmanager.py  ordermanager.py  revenuemanager.py
data/: cusAccList.csv  food.xlsx  ingredients.xlsx  revenue.xlsx  test.xlsx
foody_cus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: aiChatScreen.py  changePasswordScreenCus.py  chatScreenCus.py  foody.py  foodycus.py  geminiChatScreen.py  ingredient.py  logScreen.py  logScreencus.py  mainScreenCus.py  mainscreen.py  makingorders.py  onlineorders.py  orders.py  revenue.py  roleChoosing.py  roundButton.py  settingsScreen.py  signup.py  signupScreencus.py  welcomeScreen.py
microservices/: main.py
(+53 files in other folders)
