[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foody_cus"
version = "0.1"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.78.0",
    "uvicorn>=0.17.0",
    "pydantic>=1.9.0",
    "passlib>=1.7.4",
    "bcrypt>=3.2.0",
    "google-genai>=0.6.0",
    "scikit-learn>=1.2.2",
    "aiosqlite>=0.17.0",
    "kivy>=2.3.1",
    "kivymd>=1.2.0",
]

[dependency-groups]
dev = [
    "foody-cus",
]

[tool.uv.sources]
foody-cus = { workspace = true }
